fix logo on mobile view

--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -10,7 +10,7 @@
       z-index: 6;
 
       .main-logo {
-         float: left;
+         //float: left;
          margin: 27px 0 0 16px;
       }
    }
@@ -18,7 +18,7 @@
 
 .logo {
    width: 400px;
-   height: 67px;
+   //height: 67px;
    background: url("../images/john-lewis-logo.png") no-repeat;
 }
 
@@ -40,7 +40,7 @@ footer {
       border-bottom: 1px solid @bg-container-border;
 
       #banner{
-         height: 60px;
+         height: auto; //60px
          .main-logo {
             margin-top: 0;
          }
